# CudaPathTracer

./: .gitignore  CMakeLists.txt  README.md  plot.ipynb
common/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  CudaPortable.hpp  Image.cpp  Image.hpp  Intersection.hpp  Light.hpp  Material.hpp  MathUtils.cpp  MathUtils.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Settings.hpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Utility.cpp  Utility.hpp  Vector.hpp  global.cpp
cpu_path_tracer/: CMakeLists.txt  main.cpp
cpu_tracer/: Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
gpu_path_tracer/: CMakeLists.txt  CudaPathTrace.cu  CudaPathTrace.h  CudaPortable.cu  CudaRenderer.cu  CudaRenderer.hpp  CudaUtils.h  main.cpp
src/: Renderer.cpp  main.cpp
